feat(openAPI): Users; Added users API;
