# app/Resource/ResourceAuthToken.php
@@ -1,0 +1,17 @@
+<?php
+declare(strict_types=1);
+
+namespace App\Resource;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: "ResourceAuthToken",
+    properties: [
+        new OA\Property(property: "access_token", type: "string"),
+    ],
+    type: "object"
+)]
+class ResourceAuthToken
+{
+}
