# app/Resource/ResourceSuccess.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Resource;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: "ResourceSuccess",
+    type: "array",
+    items: new OA\Items(type: "string"),
+)]
+class ResourceSuccess
+{
+}
